BBmisc_1.6:
- convertRowsToList now converts matrices into list of vector by default (see new arg "as.vector")
- rename first, last to findFirst, findLast
- improved extractSubList a bit (new arg "matrix")
- new functions:
-- operator %btwn%.
-- convertListOfRowsToDataFrame
-- convertMatrixType
-- v*apply type of functions
-- dapply
-- rangeVal
-- getFirst, getLast
-- symdiff
-- asMatrixCols, asMatrixRows

BBmisc_1.5:
- removed stringsAsFactors, use convertDataFrameCols
- removed convertDfCols, use convertDataFrameCols
- removed listToShortString, use convertToShortString
- new functions:
-- dropNamed
-- first, last
-- binPack
-- isValidName

BBmisc_1.4:
- renamed convertDfCols to convertDataFrameCols
- deprecated listToShortString, use convertToShortString
- deprecated stringsAsFactors, use convertDataFrameCols
- chunk distributes size of chunks in a better way
- new functions:
-- makeS3Obj
-- getMaxIndex, getMinIndex
-- getMaxIndexOfRows, getMinIndexOfRows, getMaxIndexOfCols, getMinIndexOfCols
-- toRangeStr
-- getOperatingSystem, isWindows, isUnix, isLinux, isDarwin
-- clipString
-- getUnixTime
-- isScalarValue
-- makeDataFrame
-- convertToShortString
-- convertRowsToList

BBmisc_1.3-64:
- removed parallelMap et al., this is now hosted in an extra package at:
  https://github.com/berndbischl/parallelMap
- bugfix for checkArg, lower/upper only checked first element
- exta argument "missing.val" for names2
- extra argument "logicals.as.factor" for convertDFCols
- some speed improvements for convertDFCols and notin
- is.error also works now for objects of class "error" and not only "try-error"
- new functions:
-- isDirectory
-- rowLapply, rowSapply
-- setAttribute
-- seq_row, seq_col
-- strrepeat
-- makeSimpleFileLogger
-- isScalarNA
-- pause
-- printStrToChar

BBmisc_1.2-200:
- checkArg can now test whether arg is one of multiple classes (OR disjunctive)
- bug fix: cpus setting was not properly respected in multicore mode