@@ -1,7 +1,8 @@
 BBmisc_1.6:
 - convertRowsToList now converts matrices into list of vector by default (see new arg "as.vector")
 - rename first, last to findFirst, findLast
-- improved extractSubList a bit (new arg "matrix")
+- improved extractSubList and rowSapply a bit, 
+  simplification to matrix can be stated in a more readable way.
 - new functions:
 -- operator %btwn%.
 -- convertListOfRowsToDataFrame
